--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,21 +2,22 @@ spring.mvc.view.prefix=/WEB-INF/pages/
 spring.mvc.view.suffix=.jsp
 
 server.port=444
+
 # for ocp cloud
-#spring.datasource.url=${DB_URL}
-#spring.datasource.username=${DB_USER}
-#spring.datasource.password=${DB_PASSWORD}
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 
 #This is for spring data +jpa + orm configuration 
-spring.datasource.url = jdbc:mysql://localhost:3306/aprildb2025?useSSL=false&createDatabaseIfNotExist=true
-spring.datasource.username = root
-spring.datasource.password = Kiran123_AK47
+#spring.datasource.url = jdbc:mysql://localhost:3306/aprildb2025?useSSL=false&createDatabaseIfNotExist=true
+#spring.datasource.username = root
+#spring.datasource.password = Kiran123_AK47
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database uncomment below if not
 #running on OCP -  cloud -> if !!!!!! NOT RUNNING LOCALLY !!!!!!!
- spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+# spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
