--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
-#change the location of your JSP files from the traditional WAR-style directory structure to the
-# JAR-friendly Spring Boot structure.
-spring.mvc.view.prefix=src/main/webapp/WEB-INF/pages/
-spring.mvc.view.suffix=src/main/resources/META-INF/resources/WEB-INF/pages/
+spring.mvc.view.prefix=/WEB-INF/pages/
+spring.mvc.view.suffix=.jsp
 
 server.port=8080
 
