--- a/pom.xml
+++ b/pom.xml
@@ -42,11 +42,11 @@
 		
 		<!-- JSP files -->
 		 <!-- We need below two jars for jsp -->
-	<dependency>
-		<groupId>org.apache.tomcat.embed</groupId>
-		<artifactId>tomcat-embed-jasper</artifactId>
-		<scope>provided</scope>
-	</dependency>
+<!--	<dependency>-->
+<!--		<groupId>org.apache.tomcat.embed</groupId>-->
+<!--		<artifactId>tomcat-embed-jasper</artifactId>-->
+<!--		<scope>provided</scope>-->
+<!--	</dependency>-->
 <!-- If, <scope>provided</scope> inside the tomcat-embed-jasper dependency means JSP rendering engine is
 not included at runtime.
 Also, when you add <scope>provided</scope> back and rerun the application locally, it seems to work.
@@ -59,11 +59,18 @@ In a typical Spring Boot standalone JAR (using embedded Tomcat), JSP rendering m
 If you declare it with <scope>provided</scope>, Maven assumes your runtime environment (e.g., external Tomcat)
 will provide it — but in Spring Boot embedded Tomcat, you must bundle it yourself.-->
 
-	
-	<dependency>
-		<groupId>javax.servlet</groupId>
-		<artifactId>jstl</artifactId>
-	</dependency>	
+<!--		<dependency>-->
+<!--			<groupId>javax.servlet</groupId>-->
+<!--			<artifactId>jstl</artifactId>-->
+<!--		</dependency>-->
+
+<!-- rename .jsp → .html and use the spring-boot-starter-thymeleaf dependency, everything works
+     inside a JAR without extra config.-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+
 	
 	
 	<!-- Below will download spring data + jpa+ hibernate etc -->
